Fix contrast on dark sub view

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -54,6 +54,10 @@ body {
   &:focus {
     outline: 0;
   }
+
+  .background-type--dark & {
+    color: #333;
+  }
 }
 
 .emoji-notice {
